<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="ga_trackingId">UA-37644157-1</string>
    <string name="title_application">SlideME</string>
    <string name="activity_default">SlideME</string>
    <string name="sam_title">SlideME</string>
    <string name="sam_version">6.18.141023P1.076</string>
    <string name="sam_version_num">6.18</string>
    <string name="partner_bit">1</string>
    <string name="default_settings_general_country">US</string>
    <string name="default_settings_general_language">en</string>
    <string name="key_settings_general_apps_per_page">apps_per_page</string>
    <string name="key_settings_general_country">settings_general_country</string>
    <string name="key_settings_general_language">settings_general_language</string>
    <string name="key_settings_show_only_apps_without_ads">showAppsWithAds</string>
    <string name="key_settings_limit_screenshots">limitScreenshots</string>
    <string name="key_settings_unlock_parental">unlockParental</string>
    <string name="key_settings_use_pin_to_download">usePinToDownload</string>
    <string name="key_settings_pin_for_purchases_only">pinForPurchases</string>
    <string name="key_settings_parental_checklist">parentalChecklist</string>
    <string name="key_settings_manage_pin">managePin</string>
    <string name="key_settings_currency">currency</string>
    <string name="key_settings_advanced_show_incompatible_apps">advancedShowIncompatibleApps</string>
    <string name="key_settings_advanced_auto_download_new_version">autoDownloadNewVersion</string>
    <string name="key_settings_theme">theme</string>
    <string name="key_settings_screenshot_count">screenshotCount</string>
    <string name="sam">SAM</string>
    <string name="activity_myaccount">My Account</string>
    <string name="menu_myapps">@string/my_apps</string>
    <string name="menu_search">@string/search</string>
    <string name="menu_settings">@string/preferences</string>
    <string name="menu_help">@string/help</string>
    <string name="menu_themes">Themes</string>
    <string name="menu_categories">@string/categories</string>
    <string name="menu_updates">@string/apps_with_updates</string>
    <string name="report_app">Report application</string>
    <string name="loading">Loading…</string>
    <string name="title_settings_general_apps_per_page">Apps per page</string>
    <string name="title_settings_general_x_screenshots">Max screenshots</string>
    <string name="title_settings_general_countries">Target country</string>
    <string name="title_settings_general_languages">Target language</string>
    <string name="summary_settings_general_countries">Preferred country for displaying local apps</string>
    <string name="summary_settings_general_languages">Preferred language for displaying local apps</string>
    <string name="title_settings_general_clear_cache">Clear cache</string>
    <string name="summary_settings_general_clear_cache">Clear SAM internal cache</string>
    <string name="title_settings_general_clear_search_history">Clear history</string>
    <string name="summary_settings_general_clear_search_history">Clear SAM search history</string>
    <string name="summary_settings_general_clear_internal_data">Cached icons and screenshots will be deleted.</string>
    <string name="summary_settings_general_clear_search_history_message">SAM search history will be deleted.</string>
    <string name="title_settings_parental_unlock">Unlock parental settings</string>
    <string name="title_settings_parental_checklist">Types to display</string>
    <string name="summary_settings_parental_checklist">Select parental rating types to show</string>
    <string name="title_settings_use_pin_to_download">Use PIN to download</string>
    <string name="summary_settings_use_pin_to_download">Require PIN to download, buy or manually update an app</string>
    <string name="title_settings_pin_for_purchases_only">Use PIN only for purchases</string>
    <string name="summary_settings_pin_for_purchases_only">Free downloads and all updates will not require PIN</string>
    <string name="title_settings_manage_pin">Manage PIN</string>
    <string name="summary_settings_manage_pin">Add, edit or remove the PIN</string>
    <string name="title_settings_local_currency">Select currency to display</string>
    <string name="summary_settings_local_currency">Values other than US Dollars provide estimates based on the latest conversion rate. Actual charges may be different!</string>
    <string name="title_settings_advanced_show_incompatible_apps">Show incompatible apps</string>
    <string name="summary_settings_advanced_show_incompatible_apps">Incompatible apps might not function properly on this device. Enable at your own risk.</string>
    <string name="title_settings_advanced_auto_download_new_version">Download updates when they become available (Wi-Fi only)</string>
    <string name="summary_settings_advanced_auto_download_new_version">Enable this option to automatically download new versions of SAM over Wi-Fi as soon as they become available</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="uninstall">Uninstall</string>
    <string name="wallet_balance">Wallet balance</string>
    <string name="dev_wallet_balance">Developer balance</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="full_name">Full name</string>
    <string name="reg_agreements">Agreements</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="personal_info">Personal information</string>
    <string name="support">Support</string>
    <string name="allDone">All done!</string>
    <string name="about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_gift">Gift this app</string>
    <string name="sysinfo_title_device">Device</string>
    <string name="sam_version_title">SAM version</string>
    <string name="partner_title">SAM PID</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="dpiclass">Dpi class</string>
    <string name="resolution">Screen resolution</string>
    <string name="API_level">API level</string>
    <string name="header_settings_general">General</string>
    <string name="header_settings_local">Local</string>
    <string name="header_settings_cache">Cache and history</string>
    <string name="header_settings_parental">@string/parental_control</string>
    <string name="header_settings_advanced">@string/advanced</string>
    <string name="title_settings_limit_screenshots">Limit screenshots?</string>
    <string name="title_settings_show_apps_with_ads">Show only apps without advertising?</string>
    <string name="summary_settings_show_apps_with_ads">Enable this option to show only apps without ads, based on information provided by app publisher.</string>
    <string name="balance">Balance</string>
    <string name="purchased_items">Purchased items</string>
    <string name="topup">Add funds to your SlideME wallet</string>
    <string name="open_storagelocker">Open StorageLocker</string>
    <string name="fully_register">Add missing info</string>
    <string name="redownload">Redownload</string>
    <string name="limited_account_notice">"Your account is still a limited account, since you have only registered with your email address. 
Complete your profile to enable full account access."</string>
    <string name="menu_test">Score options</string>
    <string name="ram">RAM</string>
</resources>