<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/scrollable_content" android:background="?backgroundSecondary" android:layout_width="fill_parent" android:layout_height="0.0dip">
        <TextView android:layout_width="@dimen/loginWidth" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/personal_info" style="@style/Widget.TextView.Slideme.Form.Title" />
        <com.slideme.sam.manager.view.touchme.VerifyableEditText android:id="@id/email" android:nextFocusDown="@id/username" android:layout_width="@dimen/loginWidth" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/reg_item_side_margin" android:layout_marginTop="4.0dip" android:layout_marginRight="@dimen/reg_item_side_margin" android:hint="@string/email" android:inputType="text" android:imeOptions="actionNext">
            <requestFocus />
        </com.slideme.sam.manager.view.touchme.VerifyableEditText>
        <com.slideme.sam.manager.view.touchme.VerifyableEditText android:id="@id/username" android:nextFocusUp="@id/email" android:nextFocusDown="@id/password" android:layout_width="@dimen/loginWidth" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/reg_item_side_margin" android:layout_marginTop="4.0dip" android:layout_marginRight="@dimen/reg_item_side_margin" android:hint="@string/username" android:inputType="text" android:imeOptions="actionNext" />
        <com.slideme.sam.manager.view.touchme.VerifyableEditText android:id="@id/password" android:nextFocusUp="@id/username" android:nextFocusDown="@id/password2" android:layout_width="@dimen/loginWidth" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/reg_item_side_margin" android:layout_marginTop="4.0dip" android:layout_marginRight="@dimen/reg_item_side_margin" android:hint="@string/password" android:inputType="textPassword" android:imeOptions="actionNext" />
        <com.slideme.sam.manager.view.touchme.VerifyableEditText android:id="@id/password2" android:nextFocusUp="@id/password" android:nextFocusDown="@id/fullname" android:layout_width="@dimen/loginWidth" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/reg_item_side_margin" android:layout_marginTop="4.0dip" android:layout_marginRight="@dimen/reg_item_side_margin" android:hint="@string/confirm_password" android:inputType="textPassword" android:imeOptions="actionNext" />
        <com.slideme.sam.manager.view.touchme.VerifyableEditText android:id="@id/fullname" android:nextFocusUp="@id/password2" android:nextFocusDown="@id/gender" android:layout_width="@dimen/loginWidth" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/reg_item_side_margin" android:layout_marginTop="4.0dip" android:layout_marginRight="@dimen/reg_item_side_margin" android:hint="@string/full_name" android:inputType="textPersonName|textCapWords" android:imeOptions="actionDone" />
        <RadioGroup android:gravity="left|center" android:orientation="horizontal" android:id="@id/gender" android:nextFocusUp="@id/password2" android:layout_width="@dimen/loginWidth" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/reg_item_side_margin" android:layout_marginRight="@dimen/reg_item_side_margin">
            <RadioButton android:id="@id/male" android:nextFocusUp="@id/password2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/male" />
            <RadioButton android:id="@id/female" android:nextFocusUp="@id/password2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/female" />
        </RadioGroup>
        <TextView android:layout_width="@dimen/loginWidth" android:layout_height="wrap_content" android:text="@string/reg_agreements" style="@style/Widget.TextView.Slideme.Form.Title" />
        <Button android:id="@id/terms" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/terms_and_conditions" style="@style/Widget.Button.SlideMe" />
        <Button android:id="@id/privacy" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/privacy_policy" style="@style/Widget.Button.SlideMe" />
        <Button android:enabled="false" android:id="@id/button" android:layout_width="@dimen/loginWidth" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="8.0dip" android:text="@string/allDone" style="@style/Widget.Button.SlideMe.Green" />
    </LinearLayout>
</ScrollView>