<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:title="@string/header_settings_general" android:fragment="com.slideme.sam.manager.controller.fragment.preference.GeneralPreferencesFragment">
        <extra android:name="resource" android:value="preferences" />
    </header>
    <header android:title="@string/header_settings_local" android:fragment="com.slideme.sam.manager.controller.fragment.preference.LocalPreferencesFragment">
        <extra android:name="resource" android:value="preferences" />
    </header>
    <header android:title="@string/header_settings_parental" android:fragment="com.slideme.sam.manager.controller.fragment.preference.ParentalControlPreferencesFragment">
        <extra android:name="resource" android:value="preferences" />
    </header>
    <header android:title="@string/header_settings_cache" android:fragment="com.slideme.sam.manager.controller.fragment.preference.CachePreferencesFragment">
        <extra android:name="resource" android:value="preferences" />
    </header>
</preference-headers>